Lab_13/files/deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-serv
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-serv
  template:
    metadata:
      labels:
        app: nginx-serv
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
  
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
  - name: nginx-http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-serv
